--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,8 +21,8 @@
                     <li><a href="{{ url_for('main.index') }}">{{ 'Home' }}</a></li>
                     <li><a href="{{ url_for('weight.weight_add') }}">{{ '+Weight' }}</a></li>
                     <li><a href="{{ url_for('bloodpressure.blood_pressure_add') }}">{{ '+BloodPressure' }}</a></li>
-                    <li><a href="{{ url_for('labs.add_metabolic_lab') }}"> {{ +Metabolic }}</a></li>
-                    <li><a href="{{ url_for('labs.add_cbc_lab') }}"></a></li>
+                    <li><a href="{{ url_for('labs.add_metabolic_lab') }}"> {{ '+Metabolic' }}</a></li>
+                    <li><a href="{{ url_for('labs.add_cbc_lab') }}">{{ '+CBC' }}</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {% if current_user.is_anonymous %}
