--- a/app/templates/_metabolic.html
+++ b/app/templates/_metabolic.html
@@ -3,14 +3,14 @@
             <td width="70px">
             </td>
             <td>
-                <b>Na</b>: {{ panel.sodium }} <br>
-                <b>Ca</b>: {{ panel.calcium }}<br>
-                <b>Cl</b>: {{ panel.chloride }}<br>
-                <b>K</b>: {{ panel.potassium }}<br>
-                <b>Mg</b>: {{ panel.magnesium }}<br>
-                <b>BUN</b>: {{ panel.blood_urea_nitrogen }}<br>
-                <b>Cr</b>: {{ panel.creatinine }}<br>
-                <b>GLUC</b>: {{ panel.glucose }}<br>
+                <img src="images/sodium.png">: {{ panel.sodium }} <br>
+                <img src="images/ca.png">: {{ panel.calcium }}<br>
+                <img src="images/chloride.png">: {{ panel.chloride }}<br>
+                <img src="images/potassium.png">: {{ panel.potassium }}<br>
+                <img src="images/magnesium.png">: {{ panel.magnesium }}<br>
+                <img src="images/urea.png">: {{ panel.blood_urea_nitrogen }}<br>
+                <img src="images/creatine.png">: {{ panel.creatinine }}<br>
+                <img src="images/glucose.png">: {{ panel.glucose }}<br>
                 <b>Date</b>: {{ panel.timestamp }}
             </td>
         </tr>
