--- a/app/templates/_metabolic.html
+++ b/app/templates/_metabolic.html
@@ -3,14 +3,14 @@
             <td width="70px">
             </td>
             <td>
-                <img src="{{ url_for('static', filename='sodium.png')}}">: {{ panel.sodium }} <br>
-                <img src="{{ url_for('static', filename='ca.png') }}">: {{ panel.calcium }}<br>
-                <img src="{{ url_for('static', filename='chloride.png') }}">: {{ panel.chloride }}<br>
-                <img src="{{ url_for('static', filename='potassium.png') }}">: {{ panel.potassium }}<br>
-                <img src="{{ url_for('static', filename='magnesium.png') }}">: {{ panel.magnesium }}<br>
-                <img src="{{ url_for('static', filename='urea.png') }}">: {{ panel.blood_urea_nitrogen }}<br>
-                <img src="{{ url_for('static', filename='creatinine.png') }}">: {{ panel.creatinine }}<br>
-                <img src="{{ url_for('static', filename='glucose.png') }}">: {{ panel.glucose }}<br>
+                <img src="{{ url_for('static', filename='sodium.png')}}" style="width:60px;height:60px">: {{ panel.sodium }} <br>
+                <img src="{{ url_for('static', filename='ca.png') }}" style="width:60px;height:60px>: {{ panel.calcium }}<br>
+                <img src="{{ url_for('static', filename='chloride.png') }}" style="width:60px;height:60px>: {{ panel.chloride }}<br>
+                <img src="{{ url_for('static', filename='potassium.png') }}" style="width:60px;height:60px>: {{ panel.potassium }}<br>
+                <img src="{{ url_for('static', filename='magnesium.png') }}" style="width:60px;height:60px>: {{ panel.magnesium }}<br>
+                <img src="{{ url_for('static', filename='urea.png') }}" style="width:60px;height:60px>: {{ panel.blood_urea_nitrogen }}<br>
+                <img src="{{ url_for('static', filename='creatinine.png') }}" style="width:60px;height:60px>: {{ panel.creatinine }}<br>
+                <img src="{{ url_for('static', filename='glucose.png') }}" style="width:60px;height:120px>: {{ panel.glucose }}<br>
                 <b>Date</b>: {{ panel.timestamp }}
             </td>
         </tr>
