add report_id and timestamp

--- a/app/templates/_metabolic.html
+++ b/app/templates/_metabolic.html
@@ -1,4 +1,6 @@
             <tr>
+                <td>{{ panel.report_id }}</td>
+                <td>{{ panel.timestamp }}</td>
                 <td>{{ panel.sodium }}</td>
                 <td>{{ panel.calcium }}</td>
                 <td>{{ panel.chloride }}</td>
