--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,6 +24,8 @@
         <caption>Metabolic Panel Values</caption>
         <thead>
             <tr>
+                <th scope="col" width="70px">Report ID</th>
+                <th scope="col" width="70px">Date</th>
                 <th scope="col" width="70px">Sodium</th>
                 <th scope="col" width="70px">Calcium</th>
                 <th scope="col" width="70px">Chloride</th>
@@ -36,6 +38,8 @@
         </thead>
         <tbody>
             <tr>
+                <td></td>
+                <td></td>
                 <td><img src="{{ url_for('static', filename='sodium.png')}}" style="width:60px;height:60px"></td>
                 <td><img src="{{ url_for('static', filename='ca.png')}}" style="width:60px;height:60px"></td>
                 <td><img src="{{ url_for('static', filename='chloride.png')}}" style="width:60px;height:60px"></td>
