--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -53,6 +53,20 @@
         {%  include '_metabolic.html' %}
     {% endfor %}
         </tbody>
+        <tfoot>
+            <tr>
+                <th scope="col" width="70px">Report ID</th>
+                <th scope="col" width="70px">Date</th>
+                <th scope="col" width="70px">Sodium</th>
+                <th scope="col" width="70px">Calcium</th>
+                <th scope="col" width="70px">Chloride</th>
+                <th scope="col" width="70px">Potassium</th>
+                <th scope="col" width="70px">Magnesium</th>
+                <th scope="col" width="70px">BUN</th>
+                <th scope="col" width="70px">Creatinine</th>
+                <th scope="col" width="70px">Glucose</th>
+            </tr>
+        </tfoot>
     </table>
     <nav aria-label="...">
         <ul class="pager">
