--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %}
 {% import 'bootstrap/wtf.html' as wtf %}
 
+<link href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.12/css/dataTables.bootstrap.min.css" rel="stylesheet"/>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.12/js/jquery.dataTables.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.12/js/dataTables.bootstrap.min.js"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/metabolic_table.js') }}"></script>
+
 {% block app_content %}
     <h1>{{ "Weights for {}".format(current_user.username) }}</h1>
     <hr>
