--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,3 +1,9 @@
+<link href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.12/css/dataTables.bootstrap.min.css" rel="stylesheet"/>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.12/js/jquery.dataTables.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.12/js/dataTables.bootstrap.min.js"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/metabolic_table.js') }}"></script>
+
 {% extends 'bootstrap/base.html' %}
 
 {% block title %}
