--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,7 +20,7 @@
         {% include '_cbcs.html' %}
     {% endfor %}
     <h1>{{ 'Metabolic Panels for {}'.format(current_user.username) }}</h1>
-    <table data-toggle="table" data-sort-name="date" data-sort-order="desc">
+    <table data-toggle="table" data-sort-name="date" data-sort-order="desc" class="table table-striped table-bordered table-sm">
         <caption>Metabolic Panel Values</caption>
         <thead>
             <tr>
