--- a/app/templates/_cbcs.html
+++ b/app/templates/_cbcs.html
@@ -1,13 +1,6 @@
-    <table class="table table-hover">
-        <tr>
-            <td width="70px">
-            </td>
-            <td>
-                <b>WBC</b>: {{ cbc.white_blood_cell_count }} <br>
-                <b>Hb</b>: {{ cbc.hemoglobin }}<br>
-                <b>HCT</b>: {{ cbc.hematocrit }}<br>
-                <b>PLT</b>: {{ cbc.platelet }}<br>
-                <b>Date</b>: {{ cbc.timestamp }}
-            </td>
-        </tr>
-    </table>
+            <tr>
+                <td>{{ cbc.white_blood_count }}</td>
+                <td>{{ cbc.hemoglobin }}</td>
+                <td>{{ cbc.hematocrit }}</td>
+                <td>{{ cbc.platelet }}</td>
+            </tr>
