--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,10 +15,34 @@
         <br>
     {% endfor %}
     <h1>{{ 'CBC Values for {}'.format(current_user.username) }}</h1>
-    <hr>
+    <table class="table table-striped table-bordered table-sm">
+    <caption>CBC panel values</caption>
+    <thead>
+    <tr>
+        <th scope="col" class="th-sm" width="70px">Report ID</th>
+        <th scope="col" class="th-sm" width="70px">Date</th>
+        <th scope="col" class="th-sm" width="70px">White Blood Cell</th>
+        <th scope="col" class="th-sm" width="70px">Hemoglobin</th>
+        <th scope="col" class="th-sm" width="70px">Hematocrit</th>
+        <th scope="col" class="th-sm" width="70px">Platelet</th>
+    </tr>
+    </thead>
+    <tbody>
     {% for cbc in cbcs %}
         {% include '_cbcs.html' %}
     {% endfor %}
+    </tbody>
+    <tfoot>
+    <tr>
+        <th scope="col" class="th-sm" width="70px">Report ID</th>
+        <th scope="col" class="th-sm" width="70px">Date</th>
+        <th scope="col" class="th-sm" width="70px">White Blood Cell</th>
+        <th scope="col" class="th-sm" width="70px">Hemoglobin</th>
+        <th scope="col" class="th-sm" width="70px">Hematocrit</th>
+        <th scope="col" class="th-sm" width="70px">Platelet</th>
+    </tr>
+    </tfoot>
+    </table>
     <h1>{{ 'Metabolic Panels for {}'.format(current_user.username) }}</h1>
     <table data-toggle="table" data-sort-name="date" data-sort-order="desc" class="table table-striped table-bordered table-sm">
         <caption>Metabolic Panel Values</caption>
