--- a/app/templates/_cbcs.html
+++ b/app/templates/_cbcs.html
@@ -1,4 +1,6 @@
             <tr>
+                <td>{{ cbc.report_id }}</td>
+                <td>{{ cbc.timestamp }}</td>
                 <td>{{ cbc.white_blood_count }}</td>
                 <td>{{ cbc.hemoglobin }}</td>
                 <td>{{ cbc.hematocrit }}</td>
