--- a/app/templates/_cbcs.html
+++ b/app/templates/_cbcs.html
@@ -1,7 +1,7 @@
             <tr>
                 <td>{{ cbc.report_id }}</td>
                 <td>{{ cbc.timestamp }}</td>
-                <td>{{ cbc.white_blood_count }}</td>
+                <td>{{ cbc.white_blood_cell_count }}</td>
                 <td>{{ cbc.hemoglobin }}</td>
                 <td>{{ cbc.hematocrit }}</td>
                 <td>{{ cbc.platelet }}</td>
