--- a/app/templates/_pressures.html
+++ b/app/templates/_pressures.html
@@ -1,10 +1,5 @@
-    <table class="table table-hover">
-        <tr>
-            <td width="70px">
-            </td>
-            <td>
-                Pressure: {{ pressure.systolic }}/{{ pressure.diastolic }}mmhg
-                Date: {{ pressure.bp_recorded_time }}
-            </td>
-        </tr>
-    </table>
+            <tr>
+                <td>{{ pressure.bp_recorded_time }}</td>
+                <td>{{ pressure.systolic }}</td>
+                <td>{{ pressure.diastolic }}</td>
+            </tr>
