--- a/app/templates/_weights.html
+++ b/app/templates/_weights.html
@@ -1,10 +1,4 @@
-    <table class="table table-hover">
-        <tr>
-            <td width="70px">
-            </td>
-            <td>
-                Weight: {{ weight.weight }}
-                Date: {{ weight.timestamp }}
-            </td>
-        </tr>
-    </table>
+            <tr>
+                <td>{{ weight.timestamp }}</td>
+                <td>{{ weight.weight }}</td>
+            </tr>
