--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,17 +3,51 @@
 
 {% block app_content %}
     <h1>{{ "Weights for {}".format(current_user.username) }}</h1>
-    <hr>
+    <table data-toggle="table" data-sort-name="date" data-sort-order="desc" class="table table-striped table-bordered table-sm">
+    <caption>Recorded Weights</caption>
+    <thead>
+    <tr>
+        <th scope="col" class="th-sm" width="70px">Date</th>
+        <th scope="col" class="th-sm" width="70px">Weight</th>
+    </tr>
+    </thead>
+    <tbody>
     {% for weight in weights %}
         {% include '_weights.html' %}
         <br>
     {% endfor %}
+    </tbody>
+    <tfoot>
+    <tr>
+        <th scope="col" class="th-sm" width="70px">Date</th>
+        <th scope="col" class="th-sm" width="70px">Weight</th>
+    </tr>
+    </tfoot>
+    </table>
     <h1>{{ "Pressures for {}".format(current_user.username) }}</h1>
-    <hr>
+    <table data-toggle="table" data-sort-name="date" data-sort-order="desc" class="table table-striped table-bordered table-sm">
+    <caption>Blood Pressures</caption>
+    <thead>
+    <tr>
+        <th scope="col" class="th-sm" width="70px">Date</th>
+        <th scope="col" class="th-sm" width="70px">Systolic</th>
+        <th scope="col" class="th-sm" width="70px">Diastolic</th>
+    </tr>
+    </thead>
+    <tbody>
     {% for pressure in pressures %}
         {% include '_pressures.html' %}
         <br>
     {% endfor %}
+    </tbody>
+    <tfoot>
+    <tr>
+        <th scope="col" class="th-sm" width="70px">Date</th>
+        <th scope="col" class="th-sm" width="70px">Systolic</th>
+        <th scope="col" class="th-sm" width="70px">Diastolic</th>
+    </tr>
+    </tfoot>
+    </table>
     <h1>{{ 'CBC Values for {}'.format(current_user.username) }}</h1>
     <table data-toggle="table" data-sort-name="date" data-sort-order="desc" class="table table-striped table-bordered table-sm">
     <caption>CBC panel values</caption>
