--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
 
 {% block app_content %}
     <h1>{{ "Weights for {}".format(current_user.username) }}</h1>
-    <table data-toggle="table" data-sort-name="date" data-sort-order="desc" class="table table-striped table-bordered table-sm">
+    <table width="250px" data-toggle="table" data-sort-name="date" data-sort-order="desc" class="table table-striped table-bordered table-sm">
     <caption>Recorded Weights</caption>
     <thead>
     <tr>
@@ -25,13 +25,13 @@
     </tfoot>
     </table>
     <h1>{{ "Pressures for {}".format(current_user.username) }}</h1>
-    <table data-toggle="table" data-sort-name="date" data-sort-order="desc" class="table table-striped table-bordered table-sm">
+    <table width="250px" data-toggle="table" data-sort-name="date" data-sort-order="desc" class="table table-striped table-bordered table-sm">
     <caption>Blood Pressures</caption>
     <thead>
     <tr>
-        <th scope="col" class="th-sm" width="70px">Date</th>
-        <th scope="col" class="th-sm" width="70px">Systolic</th>
-        <th scope="col" class="th-sm" width="70px">Diastolic</th>
+        <th scope="col" class="th-sm" width="33%">Date</th>
+        <th scope="col" class="th-sm" width="33%">Systolic</th>
+        <th scope="col" class="th-sm" width="33%">Diastolic</th>
     </tr>
     </thead>
     <tbody>
@@ -42,9 +42,9 @@
     </tbody>
     <tfoot>
     <tr>
-        <th scope="col" class="th-sm" width="70px">Date</th>
-        <th scope="col" class="th-sm" width="70px">Systolic</th>
-        <th scope="col" class="th-sm" width="70px">Diastolic</th>
+        <th scope="col" class="th-sm" width="33%">Date</th>
+        <th scope="col" class="th-sm" width="33%">Systolic</th>
+        <th scope="col" class="th-sm" width="33%">Diastolic</th>
     </tr>
     </tfoot>
     </table>
