--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,13 +2,16 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <h1>{{ "Weights for {}".format(current_user.username) }}</h1>
+    <h1>{{ "Weights and Pressures" }}</h1>
+    <table>
+    <tr>
+    <td>
     <table width="250px" data-toggle="table" data-sort-name="date" data-sort-order="desc" class="table table-striped table-bordered table-sm">
     <caption>Recorded Weights</caption>
     <thead>
     <tr>
-        <th scope="col" class="th-sm" width="70px">Date</th>
-        <th scope="col" class="th-sm" width="70px">Weight</th>
+        <th scope="col" class="th-sm" width="50%">Date</th>
+        <th scope="col" class="th-sm" width="50%">Weight</th>
     </tr>
     </thead>
     <tbody>
@@ -24,6 +27,8 @@
     </tr>
     </tfoot>
     </table>
+    </td>
+    <td>
     <h1>{{ "Pressures for {}".format(current_user.username) }}</h1>
     <table width="250px" data-toggle="table" data-sort-name="date" data-sort-order="desc" class="table table-striped table-bordered table-sm">
     <caption>Blood Pressures</caption>
@@ -47,6 +52,9 @@
         <th scope="col" class="th-sm" width="33%">Diastolic</th>
     </tr>
     </tfoot>
+    </table>
+    </td>
+    </tr>
     </table>
     <h1>{{ 'CBC Values for {}'.format(current_user.username) }}</h1>
     <table data-toggle="table" data-sort-name="date" data-sort-order="desc" class="table table-striped table-bordered table-sm">
