--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
 
 {% block app_content %}
     <h1>{{ "Weights and Pressures" }}</h1>
-    <table>
+    <table style="border-spacing: 20px 0px">
     <tr>
     <td>
     <table width="250px" data-toggle="table" data-sort-name="date" data-sort-order="desc" class="table table-striped table-bordered table-sm">
@@ -29,7 +29,6 @@
     </table>
     </td>
     <td>
-    <h1>{{ "Pressures for {}".format(current_user.username) }}</h1>
     <table width="250px" data-toggle="table" data-sort-name="date" data-sort-order="desc" class="table table-striped table-bordered table-sm">
     <caption>Blood Pressures</caption>
     <thead>
