--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,12 @@
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/bootstrap-table.min.css" rel="stylesheet"/>
 
+<style>
+    table.side-by-side {
+        border-spacing: 20px 0px;
+        width: 100%;
+    }
+</style>
 
 {% extends 'bootstrap/base.html' %}
 
