--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,10 +3,10 @@
 
 {% block app_content %}
     <h1>{{ "Weights and Pressures" }}</h1>
-    <table style="border-spacing: 20px 0px">
+    <table class="side-by-side">
     <tr>
     <td>
-    <table width="250px" data-toggle="table" data-sort-name="date" data-sort-order="desc" class="table table-striped table-bordered table-sm">
+    <table width="45%" data-toggle="table" data-sort-name="date" data-sort-order="desc" class="table table-striped table-bordered table-sm">
     <caption>Recorded Weights</caption>
     <thead>
     <tr>
@@ -29,7 +29,7 @@
     </table>
     </td>
     <td>
-    <table width="250px" data-toggle="table" data-sort-name="date" data-sort-order="desc" class="table table-striped table-bordered table-sm">
+    <table width="45%" data-toggle="table" data-sort-name="date" data-sort-order="desc" class="table table-striped table-bordered table-sm">
     <caption>Blood Pressures</caption>
     <thead>
     <tr>
