--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,9 +2,27 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/bootstrap-table.min.css" rel="stylesheet"/>
 
 <style>
+
     table.side-by-side {
         border-spacing: 20px 0px;
         width: 100%;
+    }
+
+    .weights {
+
+    }
+
+    .pressures {
+
+    }
+
+    .shell {
+        border: 1px solid gray;
+        border-collapse: collapse;
+        width: calc(50% - 40px);
+        margin: 10px;
+        display: inline-block;
+        float: left;
     }
 </style>
 
