--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,9 +3,8 @@
 
 {% block app_content %}
     <h1>{{ "Weights and Pressures" }}</h1>
-    <table class="side-by-side">
-    <tr>
-    <td>
+    <div class="shell">
+    <!-- Add divs -->
     <table width="45%" data-toggle="table" data-sort-name="date" data-sort-order="desc" class="table table-striped table-bordered table-sm">
     <caption>Recorded Weights</caption>
     <thead>
@@ -27,8 +26,7 @@
     </tr>
     </tfoot>
     </table>
-    </td>
-    <td>
+
     <table width="45%" data-toggle="table" data-sort-name="date" data-sort-order="desc" class="table table-striped table-bordered table-sm">
     <caption>Blood Pressures</caption>
     <thead>
@@ -52,9 +50,7 @@
     </tr>
     </tfoot>
     </table>
-    </td>
-    </tr>
-    </table>
+    </div>>
     <h1>{{ 'CBC Values for {}'.format(current_user.username) }}</h1>
     <table data-toggle="table" data-sort-name="date" data-sort-order="desc" class="table table-striped table-bordered table-sm">
     <caption>CBC panel values</caption>
