--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -50,8 +50,7 @@
     </tr>
     </tfoot>
     </table>
-    </div>>
-    <h1>{{ 'CBC Values for {}'.format(current_user.username) }}</h1>
+    </div>
     <table data-toggle="table" data-sort-name="date" data-sort-order="desc" class="table table-striped table-bordered table-sm">
     <caption>CBC panel values</caption>
     <thead>
