--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,7 +26,8 @@
     </tr>
     </tfoot>
     </table>
-
+    </div>
+    <div class="shell">
     <table width="45%" data-toggle="table" data-sort-name="date" data-sort-order="desc" class="table table-striped table-bordered table-sm">
     <caption>Blood Pressures</caption>
     <thead>
