--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,7 @@
     <h1>{{ "Weights and Pressures" }}</h1>
     <div class="shell">
     <!-- Add divs -->
-    <table width="45%" data-toggle="table" data-sort-name="date" data-sort-order="desc" class="table table-striped table-bordered table-sm">
+    <table data-toggle="table" data-sort-name="date" data-sort-order="desc" class="table table-striped table-bordered table-sm">
     <caption>Recorded Weights</caption>
     <thead>
     <tr>
@@ -28,7 +28,7 @@
     </table>
     </div>
     <div class="shell">
-    <table width="45%" data-toggle="table" data-sort-name="date" data-sort-order="desc" class="table table-striped table-bordered table-sm">
+    <table data-toggle="table" data-sort-name="date" data-sort-order="desc" class="table table-striped table-bordered table-sm">
     <caption>Blood Pressures</caption>
     <thead>
     <tr>
