--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,7 +3,7 @@
 
 <style>
     .shell {
-        border: 1px solid gray;
+        border: 0px;
         border-collapse: collapse;
         width: calc(50% - 40px);
         margin: 10px;
