tables apparently suck

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,6 +10,17 @@
         display: inline-block;
         float: left;
     }
+
+    .title {
+        border: 0px;
+        border-collapse: collapse;
+        width: 100%;
+        margin: 10px;
+        display: inline-block;
+        float: left;
+        font-size: 30px;
+        font-weight: 200;
+    }
 </style>
 
 {% extends 'bootstrap/base.html' %}
