--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <h1>{{ "Weights and Pressures" }}</h1>
+    <div class="title">{{ "Weights and Pressures" }}</div>
     <div class="shell">
     <!-- Add divs -->
     <table class="table table-striped table-bordered table-sm">
@@ -52,7 +52,7 @@
     </tfoot>
     </table>
     </div>
-    <h1>Labs</h1>
+    <div class="title">Labs</div>
     <table data-toggle="table" data-sort-name="date" data-sort-order="desc" class="table table-striped table-bordered table-sm">
     <caption>CBC panel values</caption>
     <thead>
