--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,6 +4,7 @@
 {% block app_content %}
     <div class="title">{{ "Weights and Pressures" }}</div>
     <div class="shell">
+    <div class="child">
     <!-- Add divs -->
     <table class="table table-striped table-bordered table-sm">
     <caption>Recorded Weights</caption>
@@ -27,7 +28,9 @@
     </tfoot>
     </table>
     </div>
+    </div>
     <div class="shell">
+    <div class="child">
     <table class="table table-striped table-bordered table-sm">
     <caption>Blood Pressures</caption>
     <thead>
@@ -51,6 +54,7 @@
     </tr>
     </tfoot>
     </table>
+    </div>
     </div>
     <div class="title">Labs</div>
     <table data-toggle="table" data-sort-name="date" data-sort-order="desc" class="table table-striped table-bordered table-sm">
