--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,16 +6,23 @@
         border: 0px;
         border-collapse: collapse;
         width: calc(50% - 40px);
-        margin: 10px;
+        margin: 0px;
         display: inline-block;
         float: left;
+    }
+
+    .child {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
 
     .title {
         border: 0px;
         border-collapse: collapse;
         width: 100%;
-        margin: 10px;
+        margin: 0px;
         display: inline-block;
         float: left;
         font-size: 30px;
