--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,14 +9,7 @@
         margin: 0px;
         display: inline-block;
         float: left;
-        position: relative;
-    }
-
-    .child {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        vertical-align: middle;
     }
 
     .title {
