--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -81,20 +81,20 @@
     </tr>
     </tfoot>
     </table>
-    <table data-toggle="table" data-sort-name="date" data-sort-order="desc" class="table table-striped table-bordered table-sm">
+    <table class="table table-striped table-bordered table-sm">
         <caption>Metabolic Panel Values</caption>
         <thead>
             <tr>
-                <th scope="col" class="th-sm" width="70px">Report ID</th>
-                <th scope="col" class="th-sm" width="70px" data-field="date" data-sortable="true">Date</th>
-                <th scope="col" class="th-sm" width="70px">Sodium</th>
-                <th scope="col" class="th-sm" width="70px">Calcium</th>
-                <th scope="col" class="th-sm" width="70px">Chloride</th>
-                <th scope="col" class="th-sm" width="70px">Potassium</th>
-                <th scope="col" class="th-sm" width="70px">Magnesium</th>
-                <th scope="col" class="th-sm" width="70px">BUN</th>
-                <th scope="col" class="th-sm" width="70px">Creatinine</th>
-                <th scope="col" class="th-sm" width="70px">Glucose</th>
+                <th scope="col" class="th-sm" width="20%">Report ID</th>
+                <th scope="col" class="th-sm" width="20%" >Date</th>
+                <th scope="col" class="th-sm">Sodium</th>
+                <th scope="col" class="th-sm">Calcium</th>
+                <th scope="col" class="th-sm">Chloride</th>
+                <th scope="col" class="th-sm">Potassium</th>
+                <th scope="col" class="th-sm">Magnesium</th>
+                <th scope="col" class="th-sm">BUN</th>
+                <th scope="col" class="th-sm">Creatinine</th>
+                <th scope="col" class="th-sm">Glucose</th>
             </tr>
         </thead>
         <tbody>
@@ -116,16 +116,16 @@
         </tbody>
         <tfoot>
             <tr>
-                <th scope="col" width="70px">Report ID</th>
-                <th scope="col" width="70px">Date</th>
-                <th scope="col" width="70px">Sodium</th>
-                <th scope="col" width="70px">Calcium</th>
-                <th scope="col" width="70px">Chloride</th>
-                <th scope="col" width="70px">Potassium</th>
-                <th scope="col" width="70px">Magnesium</th>
-                <th scope="col" width="70px">BUN</th>
-                <th scope="col" width="70px">Creatinine</th>
-                <th scope="col" width="70px">Glucose</th>
+                <th scope="col" class="th-sm" width="20%">Report ID</th>
+                <th scope="col" class="th-sm" width="20%" >Date</th>
+                <th scope="col" class="th-sm">Sodium</th>
+                <th scope="col" class="th-sm">Calcium</th>
+                <th scope="col" class="th-sm">Chloride</th>
+                <th scope="col" class="th-sm">Potassium</th>
+                <th scope="col" class="th-sm">Magnesium</th>
+                <th scope="col" class="th-sm">BUN</th>
+                <th scope="col" class="th-sm">Creatinine</th>
+                <th scope="col" class="th-sm">Glucose</th>
             </tr>
         </tfoot>
     </table>
